2001-12-11 20:00 GMT+0700 Andi Jahja <harbour@cbn.net.id>
   * contrib/rdd_ads/ads1.c
     ! added type casts for MsVC (but still got warning on line 2086)

   * contrib/samples
     + add contrib/samples/makefile.vc
     + add contrib/samples/makevc.bat
   * contrib/samples/status.c
     ! added type casts for MsVC
   * contrib/samples/num.c
     ! added type casts for MsVC
   * contrib/samples/gauge.c
     ! added type casts for MsVC

   * contrib/libct/trig.c
     ! HB_FUNC( ASIN ), replaced abs() with fabs()
     ! HB_FUNC( ACOS ), replaced abs() with fabs()

2001-11-11 15:40 GMT+0700 Andi Jahja <harbour@cbn.net.id>
   * contrib/hgf/win32
     + add makefile.vc
     + add makevc.bat
   * contrib/hgf/win32/win32.c
     ! add type casts for MsVC

2001-11-11 23:35 UTC-0800 Brian Hays <bhays@abacuslaw.com>
   * include/hbapirdd.h
      * DBORDSCOPEINFO.scopeValue was changed from BYTE* to PHB_ITEM

   * source/rdd/dbcmd.c
      * ordScope(): changed to pass an item pointer to rdd

   * contrib/rdd_ads/ads1.c
      * adsScopeInfo and adsSetScope: fixed to handle all indexkey types
        This is a work in progress. Character and Numeric scopes
        should work fine. Some more needs to be done for Date and Logical

2001-11-11 20:10 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
   * utils/hbmake/hbmake.prg
     * Fixed an small bug on FileisNewer() function

2001-11-11 08:00 GMT+0700 Andi Jahja <harbour@cbn.net.id>
   * source/rdd/dbfcdx/dbfcdx1.c
     ! add type casts as required by MsVC

2001-11-10 20:54 GMT-3 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbfcdx/dbfcdx1.c
     ! fixed hb_cdxKeyCompare, inverted sorting if high bit set
       (positives were before negatives)

2001-11-10 04:20 GMT +0700 Andi Jahja <harbour@cbn.net.id>
   * source/rdd/dbf1.c
      ! comment unused var ULONG ulRecNo

   * source/rdd/dbfntx/dbfntx1.c
      ! add type cast for MsVC

2001-11-09 10:30 UTC-0800 Brian Hays <bhays@abacuslaw.com>